media queries variables

--- a/src/app/components/articles/article-type-main/article-type-main.component.scss
+++ b/src/app/components/articles/article-type-main/article-type-main.component.scss
@@ -1,6 +1,6 @@
 @use "/src/_import.scss" as *;
 
-@media (max-width: 768px) {
+@media (max-width: $min-width-desktop) {
 
   .main-type1 {
     img {
@@ -37,7 +37,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $min-width-desktop) {
 
   .main-type1 {
     margin-top: 3rem;
