--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,13 +20,10 @@ $angular-template-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$angular-template-theme: mat.define-light-theme((
-  color: (
-    primary: $angular-template-primary,
-    accent: $angular-template-accent,
-    warn: $angular-template-warn,
-  )
-));
+$angular-template-theme: mat.define-light-theme((color: (primary: $angular-template-primary,
+        accent: $angular-template-accent,
+        warn: $angular-template-warn,
+      )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -63,7 +60,7 @@ a:visited {
   text-decoration: none;
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: $min-width-desktop) {
   #page-content {
     width: 70%;
     /* Set the width to 60% of the screen */
@@ -135,13 +132,20 @@ h2.h2-title-article-fun {
   color: $category-fun-color;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .modal-login {
   max-width: 90%;
   width: 27.5rem;
   height: 70%;
 
-  
+
 }
