add class in order to put color on names

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -22,7 +22,7 @@
     <li>
         <img src="assets/images/Selin.jpg" alt="Photo de Selin" class="img">
         <div class="text-container">
-            <strong>Selin</strong> Issue d'une reconversion professionnelle, Selin est passionnée d'apprentissage
+            <strong class="selin">Selin</strong> Issue d'une reconversion professionnelle, Selin est passionnée d'apprentissage
             et
             d'amélioration continue dans le domaine du développement. Elle apporte sa créativité et sa rigueur à
             l'équipe.
@@ -35,7 +35,7 @@
     <li>
         <img src="assets/images/florian.png" alt="Photo de Florian" class="img">
         <div class="text-container">
-            <strong>Florian</strong> Fort d'une expérience de plus de 5 ans dans le développement, Florian est le
+            <strong class="florian">Florian</strong> Fort d'une expérience de plus de 5 ans dans le développement, Florian est le
             pilier technique de l'équipe. Son expertise et sa rigueur garantissent la qualité des solutions que nous
             proposons.
         </div>
@@ -48,7 +48,7 @@
 
         <img src="assets/images/caramel.jpg" alt="Photo de Alexandre" class="img">
         <div class="text-container">
-            <strong>Alexandre</strong> Membre discret mais toujours prêt à contribuer, Alexandre sait se montrer disponible. Son
+            <strong class="alex">Alexandre</strong> Membre discret mais toujours prêt à contribuer, Alexandre sait se montrer disponible. Son
             attention aux détails et son approche méthodique font de lui un atout précieux dans la réalisation de nos projets.
         </div>
         <div class="links">
@@ -60,7 +60,7 @@
 
         <img src="assets/images/guillaume.png" alt="Photo de Guillaume" class="img">
         <div class="text-container">
-            <strong>Guillaume</strong> Joyeux animateur, won sens de l'humour et son énergie
+            <strong class="guillaume">Guillaume</strong> Joyeux animateur, won sens de l'humour et son énergie
             positive maintiennent l'ambiance agréable au sein de l'équipe. Il sait apporter une touche de légèreté
             dans les moments les plus intenses.
         </div>
@@ -73,7 +73,7 @@
 
         <img src="assets/images/caramel.jpg" alt="Photo de Patrick" class="img">
         <div class="text-container">
-            <strong>Patrick</strong>, le membre sénior de l'équipe, apporte son expérience variée et son
+            <strong class="patrick">Patrick</strong>, le membre sénior de l'équipe, apporte son expérience variée et son
             expertise. Toujours avide de nouvelles connaissances, il cherche à se surpasser et à partager son savoir
             avec les autres membres.
         </div>
@@ -85,7 +85,7 @@
     <li>
         <img src="assets/images/Benji.png" alt="Photo de Benjamin" class="img">
         <div class="text-container">
-            <strong>Benjamin</strong> formateur de notre session. Toujours prêt à nous aider et à nous guider, il
+            <strong class="ben">Benjamin</strong> formateur de notre session. Toujours prêt à nous aider et à nous guider, il
             est notre référent technique. Il est toujours de bonne humeur et sait nous motiver. Nous avons pu, grâce à lui, réaliser ce projet.
         </div>
         <div class="links">
