--- a/src/app/pages/about-us/about-us.component.scss
+++ b/src/app/pages/about-us/about-us.component.scss
@@ -22,6 +22,25 @@
         list-style-type: none;
     }
 
+    .selin {
+        color: $category-un-color;
+    }
+    .florian{
+        color: $category-fun-color;
+    }
+    .alex{
+        color: $category-sport-color;
+    }
+    .guillaume{
+        color: $category-health-color;
+    }
+    .patrick{
+        color: $category-food-color;
+    }
+    .ben{
+        color: $category-economy-color;
+    }
+
     .img {
         width: 60%;
         height: 60%;
