--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
         </div>
         <router-outlet></router-outlet>
     </div>
+    <div class="test-svg"></div>
 </main>
 <app-footer></app-footer>
