add photos of missing members and creation of route in footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,6 +2,8 @@
 
     <div id="marquee">sugar-rush - 06/2023 - l'information décryptée sur le sucre ...</div>
 
-    
+    <div>
+        <a routerLink="/about-us">A propos</a>
+    </div>
 
 </footer>
