--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -20,9 +20,11 @@
     <h2>Rencontrez l'Équipe !</h2>
     <ul class="list">
         <li>
-            <img src="assets/images/Selin.jpg" alt="Photo de Selin" class="img">
+            <div>
+                <img src="assets/images/Selin.jpg" alt="Photo de Selin" class="img">
+            </div>
             <div class="text-container">
-                <strong class="selin">Selin</strong><br /> Issue d'une reconversion professionnelle, Selin est
+                <strong class="person un-color">Selin</strong><br /> Issue d'une reconversion professionnelle, Selin est
                 passionnée d'apprentissage
                 et
                 d'amélioration continue dans le domaine du développement. Elle apporte sa créativité et sa rigueur à
@@ -35,9 +37,11 @@
             </div>
         </li>
         <li>
-            <img src="assets/images/florian.png" alt="Photo de Florian" class="img">
+            <div>
+                <img src="assets/images/florian.png" alt="Photo de Florian" class="img">
+            </div>
             <div class="text-container">
-                <strong class="florian">Florian</strong><br /> Fort d'une expérience de plus de 5 ans dans le
+                <strong class="person fun-color">Florian</strong><br /> Fort d'une expérience de plus de 5 ans dans le
                 développement, Florian est le
                 pilier technique de l'équipe. Son expertise et sa rigueur garantissent la qualité des solutions que nous
                 proposons.
@@ -50,10 +54,12 @@
             </div>
         </li>
         <li>
-
-            <img src="assets/images/caramel.jpg" alt="Photo de Alexandre" class="img">
+            <div>
+                <img src="assets/images/Alex.jpg" alt="Photo de Alexandre" class="img">
+            </div>
             <div class="text-container">
-                <strong class="alex">Alexandre</strong><br /> Membre discret mais toujours prêt à contribuer, Alexandre
+                <strong class="person sport-color">Alexandre</strong><br /> Membre discret mais toujours prêt à
+                contribuer, Alexandre
                 sait se montrer disponible. Son
                 attention aux détails et son approche méthodique font de lui un atout précieux dans la réalisation de
                 nos projets.
@@ -66,10 +72,12 @@
             </div>
         </li>
         <li>
-
-            <img src="assets/images/guillaume.png" alt="Photo de Guillaume" class="img">
+            <div>
+                <img src="assets/images/guillaume.png" alt="Photo de Guillaume" class="img">
+            </div>
             <div class="text-container">
-                <strong class="guillaume">Guillaume</strong><br /> Joyeux animateur, won sens de l'humour et son énergie
+                <strong class="person health-color">Guillaume</strong><br /> Joyeux animateur, won sens de l'humour et
+                son énergie
                 positive maintiennent l'ambiance agréable au sein de l'équipe. Il sait apporter une touche de légèreté
                 dans les moments les plus intenses.
             </div>
@@ -82,9 +90,12 @@
         </li>
         <li>
 
-            <img src="assets/images/caramel.jpg" alt="Photo de Patrick" class="img">
+            <div>
+                <img src="assets/images/Patrick.jpg" alt="Photo de Patrick" class="img">
+            </div>
             <div class="text-container">
-                <strong class="patrick">Patrick</strong><br /> Le membre sénior de l'équipe, apporte son expérience
+                <strong class="person food-color">Patrick</strong><br /> Le membre sénior de l'équipe, apporte son
+                expérience
                 variée et son
                 expertise. Toujours avide de nouvelles connaissances, il cherche à se surpasser et à partager son savoir
                 avec les autres membres.
@@ -96,9 +107,12 @@
             </div>
         </li>
         <li>
-            <img src="assets/images/Benji.png" alt="Photo de Benjamin" class="img">
+            <div>
+                <img src="assets/images/Benji.png" alt="Photo de Benjamin" class="img">
+            </div>
             <div class="text-container">
-                <strong class="ben">Benjamin</strong><br /> Formateur de notre session. Toujours prêt à nous aider et à
+                <strong class="person economy-color">Benjamin</strong><br /> Formateur de notre session. Toujours prêt à
+                nous aider et à
                 nous guider, il
                 est notre référent technique. Il est toujours de bonne humeur et sait nous motiver. Nous avons pu, grâce
                 à lui, réaliser ce projet.
