--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -19,109 +19,6 @@
 
     <h2>Rencontrez l'Équipe !</h2>
     <ul class="list">
-        <li>
-            <div>
-                <img src="assets/images/Selin.jpg" alt="Photo de Selin" class="img">
-            </div>
-            <div class="text-container">
-                <strong class="person un-color">Selin</strong><br /> Issue d'une reconversion professionnelle, Selin est
-                passionnée d'apprentissage
-                et
-                d'amélioration continue dans le domaine du développement. Elle apporte sa créativité et sa rigueur à
-                l'équipe.
-            </div>
-            <div class="links">
-                <a href="https://www.linkedin.com/in/selin-a-4534a1200/"><i
-                        class="fab fa-linkedin-in fa-border fa-2x"></i></a>
-                <a href="https://github.com/SelinGitt"><i class='fab fa-github fa-border fa-2x'></i></a>
-            </div>
-        </li>
-        <li>
-            <div>
-                <img src="assets/images/florian.png" alt="Photo de Florian" class="img">
-            </div>
-            <div class="text-container">
-                <strong class="person fun-color">Florian</strong><br /> Fort d'une expérience de plus de 5 ans dans le
-                développement, Florian est le
-                pilier technique de l'équipe. Son expertise et sa rigueur garantissent la qualité des solutions que nous
-                proposons.
-            </div>
-            <div class="links">
-                <a href="https://www.linkedin.com/in/florian-helaine/" target="_blank"><i
-                        class="fab fa-linkedin-in fa-border fa-2x"></i></a>
-                <a href="https://github.com/FlorianHe/" target="_blank"><i
-                        class='fab fa-github fa-border fa-2x'></i></a>
-            </div>
-        </li>
-        <li>
-            <div>
-                <img src="assets/images/Alex.jpg" alt="Photo de Alexandre" class="img">
-            </div>
-            <div class="text-container">
-                <strong class="person sport-color">Alexandre</strong><br /> Membre discret mais toujours prêt à
-                contribuer, Alexandre
-                sait se montrer disponible. Son
-                attention aux détails et son approche méthodique font de lui un atout précieux dans la réalisation de
-                nos projets.
-            </div>
-            <div class="links">
-                <a href="https://www.linkedin.com/in/alexandre-b-07b3a491/" target="_blank"><i
-                        class="fab fa-linkedin-in fa-border fa-2x"></i></a>
-                <a href="https://github.com/alexboutemy" target="_blank"><i
-                        class='fab fa-github fa-border fa-2x'></i></a>
-            </div>
-        </li>
-        <li>
-            <div>
-                <img src="assets/images/guillaume.png" alt="Photo de Guillaume" class="img">
-            </div>
-            <div class="text-container">
-                <strong class="person health-color">Guillaume</strong><br /> Joyeux animateur, won sens de l'humour et
-                son énergie
-                positive maintiennent l'ambiance agréable au sein de l'équipe. Il sait apporter une touche de légèreté
-                dans les moments les plus intenses.
-            </div>
-            <div class="links">
-                <a href="https://www.linkedin.com/in/11gg/" target="_blank"><i
-                        class="fab fa-linkedin-in fa-border fa-2x"></i></a>
-                <a href="https://github.com/Guillaum6e/" target="_blank"><i
-                        class='fab fa-github fa-border fa-2x'></i></a>
-            </div>
-        </li>
-        <li>
-
-            <div>
-                <img src="assets/images/Patrick.jpg" alt="Photo de Patrick" class="img">
-            </div>
-            <div class="text-container">
-                <strong class="person food-color">Patrick</strong><br /> Le membre sénior de l'équipe, apporte son
-                expérience
-                variée et son
-                expertise. Toujours avide de nouvelles connaissances, il cherche à se surpasser et à partager son savoir
-                avec les autres membres.
-            </div>
-            <div class="links">
-                <a href="https://viadeo.journaldunet.com/p/patrick-harle-159799" target="_blank"><i
-                        class="fab fa-linkedin-in fa-border fa-2x"></i></a>
-                <a href="https://github.com/pwah59" target="_blank"><i class='fab fa-github fa-border fa-2x'></i></a>
-            </div>
-        </li>
-        <li>
-            <div>
-                <img src="assets/images/Benji.png" alt="Photo de Benjamin" class="img">
-            </div>
-            <div class="text-container">
-                <strong class="person economy-color">Benjamin</strong><br /> Formateur de notre session. Toujours prêt à
-                nous aider et à
-                nous guider, il
-                est notre référent technique. Il est toujours de bonne humeur et sait nous motiver. Nous avons pu, grâce
-                à lui, réaliser ce projet.
-            </div>
-            <div class="links">
-                <a href="https://www.linkedin.com/in/benjamin-beugnet-web-services/" target="_blank"><i
-                        class="fab fa-linkedin-in fa-border fa-2x"></i></a>
-                <a href="https://github.com/Benja-san" target="_blank"><i class='fab fa-github fa-border fa-2x'></i></a>
-            </div>
-        </li>
+        <app-person *ngFor="let person of team" [person]="person"></app-person>
     </ul>
 </div>
