--- a/src/_import.scss
+++ b/src/_import.scss
@@ -5,7 +5,7 @@ $main-text-color: #000;
 $secondary-text-color: #410B13;
 $fairy-color: #FECEE9;
 
-$category-un-color: #5D2B7D;
+$category-un-color: #5D2B7D;  // Catégorie unknown : pas encore trouvé
 $category-fun-color: #A72D89; // Catégorie Fun : a trouvé
 $category-sport-color: #1474BB; // Catégorie Sport : a trouvé
 $category-health-color: #8FC33E; // Catégorie Santé : carie
@@ -17,6 +17,10 @@ $small-border: 0.5rem;
 $big-border: 2rem;
 
 $min-width-desktop: 800px;
+
+.un-color{
+  color: $category-un-color;
+}
 
 .fun-color {
   color: $category-fun-color;
