--- a/src/app/pages/profiles/profiles.component.html
+++ b/src/app/pages/profiles/profiles.component.html
@@ -1,1 +1,12 @@
-<p>profiles works!</p>
+<section>
+
+  <app-sugar-data></app-sugar-data>
+
+  <app-sugar-inputs></app-sugar-inputs>
+
+  <div id="meter-reaction">
+    <!-- Afficher une phrase random en fonction du niveau du sucrometre -->
+    Hey le sucre c'est pas bien hein
+  </div>
+
+</section>
