--- a/src/app/pages/users/sugar-meter/sugar-meter.component.html
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.html
@@ -1,1 +1,20 @@
-<p>sugar-meter works!</p>
+<section id="sugar-meter">
+
+  <div id="meter-description">
+    <h1>Voici votre Sucromètre personnalisé !</h1>
+    <!-- on click will hide under the h1 -->
+    <p>L'OMS recommande que le sucres libres ne représentent pas plus de 10% de l'apport énergétique quotidien, même si
+      idéalement il conviendrait de réduire les surcres libres à 5% de l'apport énergétique total.
+      <br>Cela signifie donc que:
+      <br>- Les adultes ne devraient pas consommer plus de 30g de sucres libres par jour (soit 7 morceaux de sucres)
+      <br>- Les enfants de 7 à 10 ans ne devraient pas consommer plus de 24g de sucres libres par jour (soit 6 morceaux
+      de sucres)
+      <br>- Les enfants de 4 à 6 ans ne devraient pas consommer plus de 19g de sucres libres par jour (soit 5 morceaux
+      de sucres)
+      <br>Ainsi, notre Sucromètre vous permet de savoir si vous avez dépassé votre quota de sucres libres journalier !
+    </p>
+  </div>
+
+  <app-profiles></app-profiles>
+
+</section>
