sugar-meter Init and Top Description

--- a/src/app/components/sugar-inputs/sugar-inputs.component.html
+++ b/src/app/components/sugar-inputs/sugar-inputs.component.html
@@ -1,1 +1,28 @@
-<p>sugar-inputs works!</p>
+<section class="meter-inputs-section">
+  <h2>1 carré de sucre = 4g de sucre</h2>
+  <div class="meter-inputs">
+    <ul class="meter-plus">
+      <li class="btn-plus">+1</li>
+      <li class="btn-plus">+2</li>
+      <li class="btn-plus">+3</li>
+      <li class="btn-plus">+5</li>
+      <li class="btn-plus">+10</li>
+    </ul>
+
+    <ul class="meter-minus">
+      <li class="btn-minus">-1</li>
+      <li class="btn-minus">-2</li>
+      <li class="btn-minus">-3</li>
+      <li class="btn-minus">-5</li>
+      <li class="btn-minus">-10</li>
+    </ul>
+
+    <div class="profile-modification">
+      <h2>Modifie ton Profil :</h2>
+      <!-- Name, BirthDate and Logo -->
+      <input type="text">
+      <input type="text">
+      <input type="text">
+    </div>
+  </div>
+</section>
