--- a/src/app/pages/profiles/profiles.component.html
+++ b/src/app/pages/profiles/profiles.component.html
@@ -4,9 +4,17 @@
 
   <app-sugar-inputs></app-sugar-inputs>
 
-  <div id="meter-reaction">
+  <div class="meter-reaction">
     <!-- Afficher une phrase random en fonction du niveau du sucrometre -->
     Hey le sucre c'est pas bien hein
+  </div>
+
+  <div class="profile-creation">
+    <h2>Créer un nouveau Profil :</h2>
+    <!-- Name, BirthDate and Logo -->
+    <input type="text">
+    <input type="text">
+    <input type="text">
   </div>
 
 </section>
