--- a/src/app/components/sugar-data/sugar-data.component.html
+++ b/src/app/components/sugar-data/sugar-data.component.html
@@ -1,2 +1,18 @@
-<p>sugar-data works!</p>
 <!-- Pile de sucres qui se colorit en fonction du nombre de sucres dans le profile ce jour ci -->
+<section class="meter-section-svg">
+  <div class="meter-svg">
+    <svg *ngFor="let i of [].constructor(4)" viewBox="0 0 16.00 16.00" version="1.1" xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" stroke="#000000" stroke-width="0.00016"
+      transform="matrix(-1, 0, 0, 1, 0, 0)rotate(270)">
+      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC"
+        stroke-width="0.128">
+      </g>
+      <g id="SVGRepo_iconCarrier">
+        <path fill="#FECEE9"
+          d="M8 0l-8 2v10l8 4 8-4v-10l-8-2zM14.4 2.6l-5.9 2.2-6.6-2.2 6.1-1.6 6.4 1.6zM1 11.4v-8.1l7 2.4v9.2l-7-3.5z">
+        </path>
+      </g>
+    </svg>
+  </div>
+</section>
