--- a/src/app/pages/users/sugar-meter/sugar-meter.component.scss
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.scss
@@ -24,8 +24,6 @@
       font-family: "Glam-queen";
       width: 100%;
       border-bottom: 2px solid $secondary-text-color;
-      padding-left: 0;
-      padding-right: 0;
     }
 
     p {
@@ -70,6 +68,8 @@
   //     }
   //   }
   // }
+
+  .profile-creation {}
 }
 
 @media only screen and (min-width: $min-width-desktop) and (max-width: 1024px) {
@@ -88,19 +88,7 @@
 
 @media screen and (min-width: 1024px) and (orientation: landscape) {
   #sugar-meter {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: $big-border;
-
     #meter-description {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: $big-border;
-      overflow: hidden;
-      transition: 1s;
-
       h1 {
         cursor: pointer;
         font-size: 3rem;
@@ -109,16 +97,8 @@
       }
 
       p {
-        z-index: 1;
-        color: $secondary-text-color;
-        padding: $small-border;
         margin-left: $big-border;
         margin-right: $big-border;
-        border: 1px solid $secondary-text-color;
-        border-top: 0px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        transition: 1s;
       }
     }
   }
