--- a/src/app/components/sugar-data/sugar-data.component.html
+++ b/src/app/components/sugar-data/sugar-data.component.html
@@ -1,17 +1,31 @@
 <!-- Pile de sucres qui se colorit en fonction du nombre de sucres dans le profile ce jour ci -->
 <section class="meter-section-svg">
   <div class="meter-svg">
-    <svg *ngFor="let i of [].constructor(4)" viewBox="0 0 16.00 16.00" version="1.1" xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" stroke="#000000" stroke-width="0.00016"
-      transform="matrix(-1, 0, 0, 1, 0, 0)rotate(270)">
+    <svg *ngFor="let i of [0,1,2,3,4,5,6,7]" id="svg-{{i}}" fill="#FECEE9" version="1.1"
+      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 415.00 415.00" xmlns:xlink="http://www.w3.org/1999/xlink"
+      enable-background="new 0 0 415 415" stroke="#FECEE9" stroke-width="14.525"
+      transform="matrix(-1, 0, 0, -1, 0, 0)rotate(0)">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC"
-        stroke-width="0.128">
+      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="4.15">
       </g>
       <g id="SVGRepo_iconCarrier">
-        <path fill="#FECEE9"
-          d="M8 0l-8 2v10l8 4 8-4v-10l-8-2zM14.4 2.6l-5.9 2.2-6.6-2.2 6.1-1.6 6.4 1.6zM1 11.4v-8.1l7 2.4v9.2l-7-3.5z">
-        </path>
+        <g>
+          <circle cx="83" cy="312.171" r="7.5"></circle>
+          <circle cx="53" cy="282.171" r="7.5"></circle>
+          <circle cx="251.995" cy="362" r="7.5"></circle>
+          <circle cx="332" cy="189.868" r="7.5"></circle>
+          <circle cx="362" cy="219.868" r="7.5"></circle>
+          <circle cx="332" cy="93.741" r="7.5"></circle>
+          <path
+            d="M37.5,400H15V15h75.5c4.142,0,7.5-3.358,7.5-7.5S94.642,0,90.5,0h-83C3.358,0,0,3.358,0,7.5v400c0,4.142,3.358,7.5,7.5,7.5 h30c4.142,0,7.5-3.358,7.5-7.5S41.642,400,37.5,400z">
+          </path>
+          <path
+            d="m407.5,317c-4.143,0-7.5,3.358-7.5,7.5v75.5h-332.5c-4.142,0-7.5,3.358-7.5,7.5s3.358,7.5 7.5,7.5h340c4.143,0 7.5-3.358 7.5-7.5v-83c0-4.142-3.357-7.5-7.5-7.5z">
+          </path>
+          <path
+            d="m407.5,0h-287c-4.142,0-7.5,3.358-7.5,7.5s3.358,7.5 7.5,7.5h279.5v279.5c0,4.142 3.357,7.5 7.5,7.5s7.5-3.358 7.5-7.5v-287c0-4.142-3.357-7.5-7.5-7.5z">
+          </path>
+        </g>
       </g>
     </svg>
   </div>
