article and their paragraphs

--- a/src/app/components/articles/article/body/body.component.html
+++ b/src/app/components/articles/article/body/body.component.html
@@ -1,2 +1,6 @@
-<section class="body" [innerHTML]="sanitizeHtml(content)">
+<section class="body">
+
+    <app-paragraph *ngFor="let paragraph of article.listParagraphs" [paragraph]="paragraph"
+        [categorySlug]="article.category.slug">
+    </app-paragraph>
 </section>
