--- a/src/_import.scss
+++ b/src/_import.scss
@@ -5,7 +5,7 @@ $main-text-color: #000;
 $secondary-text-color: #410B13;
 $fairy-color: #FECEE9;
 
-$category-un-color: #5D2B7D;  // Catégorie unknown : pas encore trouvé
+$category-un-color: #5D2B7D; // Catégorie unknown : pas encore trouvé
 $category-fun-color: #A72D89; // Catégorie Fun : a trouvé
 $category-sport-color: #1474BB; // Catégorie Sport : a trouvé
 $category-health-color: #8FC33E; // Catégorie Santé : carie
@@ -18,7 +18,27 @@ $big-border: 2rem;
 
 $min-width-desktop: 800px;
 
-.un-color{
+::ng-deep .mdc-tab--active .mdc-tab__text-label {
+  color: $secondary-text-color !important;
+}
+
+::ng-deep .mdc-tab--active .mdc-tab-indicator .mdc-tab-indicator__content {
+  border-color: $secondary-text-color;
+}
+
+::ng-deep .mat-mdc-tab-list .mat-mdc-tab-labels .mdc-tab:active {
+  background-color: $fairy-color;
+}
+
+
+@media only screen and (min-width: $min-width-desktop) {
+  ::ng-deep .mat-mdc-tab-list .mat-mdc-tab-labels .mdc-tab:hover {
+    background-color: $fairy-color;
+  }
+}
+
+
+.un-color {
   color: $category-un-color;
 }
 
