--- a/src/app/components/sugar-data/sugar-data.component.html
+++ b/src/app/components/sugar-data/sugar-data.component.html
@@ -1,10 +1,16 @@
 <!-- Pile de sucres qui se colorit en fonction du nombre de sucres dans le profile ce jour ci -->
 <section class="meter-section-svg">
   <div class="meter-svg">
-    <svg *ngFor="let i of [0,1,2,3,4,5,6,7]" id="svg-{{i}}" fill="#FECEE9" version="1.1"
+    <svg #svgElement *ngFor="let i of [0,1,2,3,4,5,6,7]" class="svg-class svg-class-{{i}}" fill="#FECEE9" version="1.1"
       xmlns="http://www.w3.org/2000/svg" viewBox="0 0 415.00 415.00" xmlns:xlink="http://www.w3.org/1999/xlink"
       enable-background="new 0 0 415 415" stroke="#FECEE9" stroke-width="14.525"
       transform="matrix(-1, 0, 0, -1, 0, 0)rotate(0)">
+      <defs>
+        <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+          <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
+          <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
+        </linearGradient>
+      </defs>
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
       <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="4.15">
       </g>
