--- a/src/app/components/sugar-inputs/sugar-inputs.component.scss
+++ b/src/app/components/sugar-inputs/sugar-inputs.component.scss
@@ -5,10 +5,12 @@
 
   .meter-inputs {
     display: flex;
+    flex-direction: column;
     // justify-content: center;
 
     ul {
       list-style-type: none;
+      display: flex;
 
       li {
         color: $fairy-color;
