--- a/src/app/pages/users/sugar-meter/sugar-meter.component.html
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.html
@@ -1,7 +1,7 @@
 <section id="sugar-meter">
 
   <div id="meter-description">
-    <h1 id="meter-description-title" (click)="slideDescription()">Voici votre Sucromètre personnalisé !</h1>
+    <!-- <h1 id="meter-description-title" (click)="slideDescription()">Voici votre Sucromètre personnalisé !</h1>
     <p id="meter-description-text"><span></span>L'OMS recommande que les sucres libres ne représentent pas plus de 10%
       de l'apport énergétique
       quotidien, même si
@@ -14,29 +14,60 @@
       de sucres)
       <br><span>Ainsi, notre Sucromètre vous permet de savoir si vous avez dépassé votre quota de sucres libres
         journalier !</span>
-    </p>
+    </p> -->
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title class="meter-description-title">
+          Voici votre Sucromètre personnalisé !
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p id="meter-description-text">&nbsp;L'OMS recommande que les sucres libres ne représentent pas plus de 10%
+        de l'apport énergétique
+        quotidien, même si
+        idéalement il conviendrait de réduire les surcres libres à 5% de l'apport énergétique total.
+        <br>&nbsp;Cela signifie donc que:
+        <br>- Les adultes ne devraient pas consommer plus de 30g de sucres libres par jour (soit 7 morceaux de sucres)
+        <br>- Les enfants de 7 à 10 ans ne devraient pas consommer plus de 24g de sucres libres par jour (soit 6
+        morceaux
+        de sucres)
+        <br>- Les enfants de 4 à 6 ans ne devraient pas consommer plus de 19g de sucres libres par jour (soit 5 morceaux
+        de sucres)
+        <br><span>Ainsi, notre Sucromètre vous permet de savoir si vous avez dépassé votre quota de sucres libres
+          journalier !</span>
+      </p>
+    </mat-expansion-panel>
   </div>
 
-  <mat-tab-group>
+  <mat-tab-group class="connection-group">
     <!-- Loop on Profiles -->
-    <mat-tab *ngFor="let tab of lotsOfTabs">
+    <mat-tab *ngFor="let profile of profiles">
       <!-- Represent the title of the tab -->
       <ng-template mat-tab-label class="meter-tab">
         <!-- Custom icons to do -->
         <mat-icon class="example-tab-icon">thumb_up</mat-icon>
-        First
+        {{profile.name}}
       </ng-template>
       <!-- Content -->
-      <app-profiles></app-profiles>
+      <app-profiles [profile]="profile"></app-profiles>
     </mat-tab>
   </mat-tab-group>
 
   <div class="profile-creation">
     <h2>Créer un nouveau Profil :</h2>
     <!-- Name, BirthDate and Logo -->
-    <input type="text">
-    <input type="text">
-    <input type="text">
+    <form [formGroup]="profileCreationForm" (ngSubmit)="profileCreationForm.valid && onSubmit()">
+
+      <label>Nom
+        <input type="text" formControlName="name"></label>
+
+      <label>Date de naissance
+        <input type="date" formControlName="birthDate"></label>
+
+      <label>Icone
+        <input type="text" formControlName="logo"></label>
+
+      <button [disabled]="!profileCreationForm.valid" type="submit">Valider</button>
+    </form>
   </div>
 
 </section>
