update all user's logic + creation validator + update comment with user

--- a/src/app/components/articles/article/title/title.component.html
+++ b/src/app/components/articles/article/title/title.component.html
@@ -9,7 +9,7 @@
       <p class="leads">{{ article.leads }}</p>
     </div>
     <div class="author">
-      <p>{{ article.author.firstname }} {{ article.author.lastname }}
+      <p>{{ article.author.firstName |titlecase }} {{ article.author.lastName | titlecase }}
         Published: {{ article.publicationDate | date }} | Updated: {{ article.modificationDate | date }}
       </p>
     </div>
