--- a/src/app/components/sugar-data/sugar-data.component.html
+++ b/src/app/components/sugar-data/sugar-data.component.html
@@ -1,15 +1,41 @@
-<!-- Pile de sucres qui se colorit en fonction du nombre de sucres dans le profile ce jour ci -->
+<!-- Pile de sucres qui se colorit en fonction du nombre de sucres dans le profile ce jour ci  fill="#FECEE9" stroke="#FECEE9" stroke-width="14.525"-->
 <section class="meter-section-svg">
   <div class="meter-svg">
-    <svg #svgElement *ngFor="let i of [0,1,2,3,4,5,6,7]" class="svg-class svg-class-{{i}}" fill="#FECEE9" version="1.1"
+    <svg #svgElement *ngFor="let i of [0,1,2,3,4,5,6,7]" class="svg-class svg-class-{{i}}" version="1.1"
       xmlns="http://www.w3.org/2000/svg" viewBox="0 0 415.00 415.00" xmlns:xlink="http://www.w3.org/1999/xlink"
-      enable-background="new 0 0 415 415" stroke="#FECEE9" stroke-width="14.525"
-      transform="matrix(-1, 0, 0, -1, 0, 0)rotate(0)">
+      enable-background="new 0 0 415 415" background-color="#FECEE9" color="transparent"
+      transform="matrix(-1, 0, 0, -1, 0, 0)rotate(0)" width="800%">
       <defs>
-        <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-          <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
-          <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
+        <linearGradient id="Gradient1">
+          <stop class="stop1" offset="0%" />
+          <stop class="stop2" offset="100%" />
+          <stop class="stop3" offset="200%" />
+          <stop class="stop3" offset="300%" />
+          <stop class="stop3" offset="400%" />
+          <stop class="stop3" offset="500%" />
+          <stop class="stop3" offset="600%" />
+          <stop class="stop3" offset="700%" />
+          <stop class="stop3" offset="800%" />
         </linearGradient>
+        <style>
+          #g {
+            fill: url(#Gradient1);
+            stroke: url(#Gradient1);
+          }
+
+          .stop1 {
+            stop-color: red;
+          }
+
+          .stop2 {
+            stop-color: black;
+            stop-opacity: 0;
+          }
+
+          .stop3 {
+            stop-color: blue;
+          }
+        </style>
       </defs>
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
       <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="4.15">
