--- a/src/app/components/sugar-data/sugar-data.component.html
+++ b/src/app/components/sugar-data/sugar-data.component.html
@@ -1,25 +1,19 @@
 <!-- Pile de sucres qui se colorit en fonction du nombre de sucres dans le profile ce jour ci  fill="#FECEE9" stroke="#FECEE9" stroke-width="14.525"-->
 <section class="meter-section-svg">
-  <div class="test" [innerHTML]="4.9 | sugarmeter"></div>
+  <div class="test" [innerHTML]="12.4 | sugarmeter"></div>
   <div class="meter-svg">
-    <svg #svgElement *ngFor="let i of [0,1,2,3,4,5,6,7]" class="svg-class svg-class-{{i}}" version="1.1"
+    <svg #svgElement *ngFor="let i of [0,1,2,3,4,5,6,7]" class="svg-class svg-class-{{i}}" fill="#FECEE9" stroke="#FECEE9" stroke-width="14.525" version="1.1"
       xmlns="http://www.w3.org/2000/svg" viewBox="0 0 415.00 415.00" xmlns:xlink="http://www.w3.org/1999/xlink"
-      enable-background="new 0 0 415 415" background-color="#FECEE9" color="transparent"
+      enable-background="new 0 0 415 415"
       transform="matrix(-1, 0, 0, -1, 0, 0)rotate(0)" width="800%">
       <defs>
         <linearGradient id="Gradient1">
           <stop class="stop1" offset="0%" />
-          <stop class="stop2" offset="100%" />
-          <stop class="stop3" offset="200%" />
-          <stop class="stop3" offset="300%" />
-          <stop class="stop3" offset="400%" />
-          <stop class="stop3" offset="500%" />
-          <stop class="stop3" offset="600%" />
-          <stop class="stop3" offset="700%" />
-          <stop class="stop3" offset="800%" />
+          <stop class="stop2" offset="50%" />
+          <stop class="stop3" offset="100%" />
         </linearGradient>
         <style>
-          #g {
+          .svg-class {
             fill: url(#Gradient1);
             stroke: url(#Gradient1);
           }
@@ -30,7 +24,7 @@
 
           .stop2 {
             stop-color: black;
-            stop-opacity: 0;
+
           }
 
           .stop3 {
